<resources>
    <string name="app_name">Apex Code Assesment</string>
    <string name="action_settings">Settings</string>
    <string name="my_random_user">My random user</string>
    <string name="view_details">View details</string>
    <string name="details_name">Name: %1$s %2$s</string>
    <string name="details_email">Email: %s</string>
    <string name="details_location">Location: (%1$s, %2$s)</string>
    <string name="calculate_distance_button_details">Calculate distance from current location</string>
    <string name="calculate_distance_button">Calculate distance</string>
    <string name="location_random_user">Location of random user: (%1$s, %2$s)</string>
    <string name="location_phone">Location of this phone: (%1$s, %2$s)</string>
    <string name="location_result_miles">[%f] miles</string>
    <string name="contentDesc">Profile Image In Large\n</string>
    <string name="email">Email:</string>
    <string name="user_list_button">Show 10 users\n</string>
    <string name="name_lbl">Name:\n</string>
    <string name="refresh_btn">Refresh random user</string>
</resources>