<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.main.MainActivity">

    <!-- TODO (2 points): Convert to ConstraintLayout -->
    <!-- TODO (1 point): Address Android Studio warnings -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_random_user"
            android:textAppearance="?textAppearanceHeadline4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_selected_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_title"
            app:layout_constraintTop_toBottomOf="@id/main_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp">

            <FrameLayout
                android:id="@+id/image_v"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_chainStyle="spread"
                app:layout_constraintEnd_toStartOf="@id/user_info_v"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/main_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="#33aaaaaa"
                    android:contentDescription="@string/contentDesc" />

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_info_v"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/image_v"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/name_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/main_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_lbl"
                        android:textAppearance="?textAppearanceBody2"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/main_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintLeft_toRightOf="@id/main_name_label"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Jon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/email_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_v">

                    <TextView
                        android:id="@+id/main_email_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAppearance="?textAppearanceBody2"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/main_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintLeft_toRightOf="@id/main_email_label"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="robert@test.com" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/main_see_details_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_v" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/main_refresh_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_selected_card"
            android:text="@string/refresh_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_selected_card"/>

        <View
            android:id="@+id/main_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/main_refresh_button"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_refresh_button"
            android:background="#11111111" />

        <Button
            android:id="@+id/main_user_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_divider"
            android:text="@string/user_list_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_divider"/>

        <!-- TODO (5 points): Convert to RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_user_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_user_list_button"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_user_list_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
